@@ -351,6 +351,12 @@ def test_latex_show_urls_is_inline(app, status, warning):
     assert 'Third footnote: \\footnote[3]{\nThird\n}' in result
     assert ('\\href{http://sphinx-doc.org/~test/}{URL including tilde} '
             '(http://sphinx-doc.org/\\textasciitilde{}test/)' in result)
+    assert ('\\item[{\\href{http://sphinx-doc.org/}{URL in term} (http://sphinx-doc.org/)}] '
+            '\\leavevmode\nDescription' in result)
+    assert ('\\item[{Footnote in term \\footnotemark[4]}] '
+            '\\leavevmode\\footnotetext[4]{\nFootnote in term\n}\nDescription' in result)
+    assert ('\\item[{\\href{http://sphinx-doc.org/}{Term in deflist} (http://sphinx-doc.org/)}] '
+            '\\leavevmode\nDescription' in result)
 
 
 @with_app(buildername='latex', testroot='footnotes',
@@ -368,6 +374,12 @@ def test_latex_show_urls_is_footnote(app, status, warning):
     assert 'Third footnote: \\footnote[5]{\nThird\n}' in result
     assert ('\\href{http://sphinx-doc.org/~test/}{URL including tilde}'
             '\\footnote[4]{\nhttp://sphinx-doc.org/\\textasciitilde{}test/\n}' in result)
+    assert ('\\item[{\\href{http://sphinx-doc.org/}{URL in term}\\footnotemark[6]}] '
+            '\\leavevmode\\footnotetext[6]{\nhttp://sphinx-doc.org/\n}\nDescription' in result)
+    assert ('\\item[{Footnote in term \\footnotemark[8]}] '
+            '\\leavevmode\\footnotetext[8]{\nFootnote in term\n}\nDescription' in result)
+    assert ('\\item[{\\href{http://sphinx-doc.org/}{Term in deflist}\\footnotemark[7]}] '
+            '\\leavevmode\\footnotetext[7]{\nhttp://sphinx-doc.org/\n}\nDescription' in result)
 
 
 @with_app(buildername='latex', testroot='footnotes',
@@ -383,3 +395,9 @@ def test_latex_show_urls_is_no(app, status, warning):
     assert '\\href{http://sphinx-doc.org/}{Sphinx}' in result
     assert 'Third footnote: \\footnote[3]{\nThird\n}' in result
     assert '\\href{http://sphinx-doc.org/~test/}{URL including tilde}' in result
+    assert ('\\item[{\\href{http://sphinx-doc.org/}{URL in term}}] '
+            '\\leavevmode\nDescription' in result)
+    assert ('\\item[{Footnote in term \\footnotemark[4]}] '
+            '\\leavevmode\\footnotetext[4]{\nFootnote in term\n}\nDescription' in result)
+    assert ('\\item[{\\href{http://sphinx-doc.org/}{Term in deflist}}] '
+            '\\leavevmode\nDescription' in result)
