@@ -10,6 +10,7 @@ Bugs fixed
 * #1833: Fix email addresses is showed again if latex_show_urls is not None
 * #2176: sphinx.ext.graphviz: use <object> instead of <img> to embed svg
 * #967: Fix SVG inheritance diagram is not hyperlinked (clickable)
+* #1237: Fix footnotes not working in definition list in LaTeX
 
 
 Release 1.3.3 (released Dec 2, 2015)
